# type-inference

./: .gitignore  README.md  dune-project  flake.nix  type_inference.opam
dune.lock/: lock.dune
lib/: dune  expressions.ml  inference.ml  types.ml  unification.ml
test/: dune
